--- a/src/style.css
+++ b/src/style.css
@@ -2,13 +2,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Poor+Story&display=swap');
 
 header{
-    background-image: url("./lib/img/biciheader.jpg");
-    background-position: top center;
-    height: 9em;
+    width: 100%;
+    height: auto;
+    display: inline-flex;
+    position: center;
 }
 
 .wel{
-    display: block;
+    display: inline-flex;
     position: relative;
     width: 100%;
     height: 100%;
@@ -42,19 +43,61 @@ header{
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
+#guardar{
+    width: 100px;
+    height: 50px;
+    font-size: 18px;
+    text-align: center;
+    margin: 10%;
+    left: 70%;
+}
+
+#entrada{
+    background: linear-gradient(180deg, #65B780 0%, rgba(255, 255, 255, 0) 100%), #DEE66C;
+    border-radius: 10px;
+    margin: 10%;
+    font-family: Poor Story;
+    font-size: 18px;
+    text-align: center;
+    color: #7B3C12;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+}
+
+#salida{
+    background: linear-gradient(180deg, #65B780 0%, rgba(255, 255, 255, 0) 100%), #DEE66C;
+    border-radius: 10px;
+    margin: 10%;
+    font-family: Poor Story;
+    font-size: 18px;
+    text-align: center;
+    color: #7B3C12;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+#frase{
+    font-family: Poor Story;
+    font-size: 18px;
+    text-align: center;
+    color: #7B3C12;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    background: #FF896B;
+    border: 2px solid #D8E16A;
+    box-sizing: border-box;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+}
+
 footer{
     width: 100%;
-    height: 60px;
-    left: 0px;
-    top: 676px;
+    height: auto;
+    display: inline-flex;
     background: #FF896B;
 }
 
 .pag{
    width: 130px;
    height: 60px;
-   left: 284px;
-   top: 676px;
    background: #72C36E;
    font-family: Shadows Into Light Two;
    font-style: normal;
@@ -70,12 +113,5 @@ footer{
    color: #79390D;
 }
  
-.iconBici{
-    width: 13%;
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    padding: 0px;
 
-}
 
